--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
   "name": "vue-mapbox-ts",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1-beta.16",
+  "description": "Mapbox Framework for Vue.js written in TypeScript",
+  "homepage": "https://gitlab.com/relief-melone/vue-mapbox-ts",
+  "bugs": {
+    "url": "https://gitlab.com/relief-melone/vue-mapbox-ts/-/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/relief-melone/vue-mapbox-ts.git"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Relief Melone",
+    "email": "relief.melone@gmail.com"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "build": "rm -rf lib/ && rollup -c",
+    "docs:build": "vuepress build docs",
+    "docs:dev": "vuepress dev docs",
+    "fix": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --no-fix",
+    "prepublishOnly": "npm run build",
+    "test": "vue-cli-service test:unit"
+  },
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "es2015": "lib/index.js",
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
+    "mapbox-gl": "^2.1.1",
+    "my-deferred": "^1.0.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@types/chai": "^4.2.11",
+    "@types/mapbox-gl": "^2.1.0",
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -23,9 +50,21 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
+    "@wessberg/rollup-plugin-ts": "^1.3.8",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.5",
+    "postcss-simple-vars": "^6.0.3",
+    "postcss-url": "^10.1.1",
+    "pug": "^3.0.2",
+    "rollup": "^2.40.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-pug": "^1.1.1",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3"
