--- a/package.json
+++ b/package.json
@@ -68,5 +68,6 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3"
-  }
+  },
+  "keywords": ["vue3", "mapbox", "typescript", "vue.js", "vue"]
 }
