--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-mapbox-ts",
-  "version": "0.0.1-beta.19",
+  "version": "0.0.1-beta.20",
   "description": "Mapbox Framework for Vue.js written in TypeScript",
   "homepage": "https://gitlab.com/relief-melone/vue-mapbox-ts",
   "bugs": {
@@ -15,8 +15,14 @@
     "name": "Relief Melone",
     "email": "relief.melone@gmail.com"
   },
+  "config": {
+    "rollup": "rollup.config.js"
+  },
   "scripts": {
     "build": "rm -rf lib/ && rollup -c",
+    "b": "rm -rf lib/ && yarn build:js",
+    "build:js": "rimraf dist && cross-env NODE_ENV=production rollup --config $npm_package_config_rollup && yarn build:types",
+    "build:types": "tsc --build tsconfigtypes.json",
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs",
     "fix": "vue-cli-service lint",
@@ -24,23 +30,28 @@
     "prepublishOnly": "npm run build",
     "test": "vue-cli-service test:unit"
   },
-  "main": "lib/index.js",
+  "main": "lib/index.min.js",
   "module": "lib/index.esm.js",
-  "es2015": "lib/index.js",
+  "es2015": "lib/index.min.js",
+  "types": "lib/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mapbox-gl": "^2.1.0",
+    "@types/mocha": "^5.2.4",
     "mapbox-gl": "^2.1.1",
     "my-deferred": "^1.0.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "@types/chai": "^4.2.11",
-    "@types/mapbox-gl": "^2.1.0",
-    "@types/mocha": "^5.2.4",
+    "@rollup/plugin-replace": "^2.4.1",
+    "@rollup/plugin-url": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -52,6 +63,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
     "chai": "^4.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "postcss-import": "^14.0.0",
@@ -62,12 +74,21 @@
     "rollup": "^2.40.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-pug": "^1.1.1",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "yarn": "^1.22.10"
   },
-  "keywords": ["vue3", "mapbox", "typescript", "vue.js", "vue"]
+  "keywords": [
+    "vue3",
+    "mapbox",
+    "typescript",
+    "vue.js",
+    "vue"
+  ]
 }
