--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "config": {
     "rollup": "rollup.config.js"
   },
-  "scripts": {
-    "build": "rm -rf lib/ && rollup -c",
-    "b": "rm -rf lib/ && yarn build:js",
+  "scripts": {    
+    "build": "rm -rf lib/ && yarn build:js",
     "build:js": "rimraf dist && cross-env NODE_ENV=production rollup --config $npm_package_config_rollup && yarn build:types",
     "build:types": "tsc --build tsconfigtypes.json",
     "docs:build": "vuepress build docs",
