--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-mapbox-ts",
-  "version": "0.0.1-beta.23",
+  "version": "0.1.0-beta.1",
   "description": "Mapbox Framework for Vue.js written in TypeScript",
   "homepage": "https://gitlab.com/relief-melone/vue-mapbox-ts",
   "bugs": {
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@types/chai": "^4.2.11",
+    "@types/geojson": "^7946.0.7",
     "@types/mapbox-gl": "^2.1.0",
     "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
