removed accidentaly deleted modules

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/mapbox-gl": "^2.1.0",
+    "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
     "mapbox-gl": "^2.1.1",
     "my-deferred": "^1.0.3",
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-unit-mocha": "^4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
