--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.2.4-alpha.1",
+  "version": "0.2.4",
   "description": "Mapbox Framework for Vue.js written in TypeScript",
   "author": {
     "name": "Relief Melone",
