--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.3.0",
-  "description": "Mapbox Framework for Vue.js written in TypeScript",
+  "version": "0.3.1",
+  "description": "Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
     "email": "relief.melone@gmail.com"
@@ -30,13 +30,14 @@
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@types/chai": "^4.2.11",
     "@types/geojson": "^7946.0.7",
-    "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/mapbox-gl": "^2.1.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
+    "fast-deep-equal": "^3.1.3",
     "mapbox-gl": "^2.1.1",
     "my-deferred": "^1.0.3",
-    "vue": "^3.0.0"
+    "vue": "^3.0.7"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -51,7 +52,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-mocha": "^4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "3.0.7",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
