--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
@@ -35,9 +35,9 @@
     "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
-    "mapbox-gl": "^2.1.1",
+    "mapbox-gl": "^2.2.0",
     "my-deferred": "^1.0.3",
-    "vue": "^3.0.7"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -52,7 +52,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-mocha": "^4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "3.0.7",
+    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
