--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "Highly reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
@@ -35,6 +35,7 @@
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
+    "deep-equal": "^2.0.5",
     "fast-deep-equal": "^3.1.3",
     "mapbox-gl": "^2.2.0",
     "my-deferred": "^1.0.3",
@@ -47,6 +48,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-url": "^6.0.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/mapbox__mapbox-gl-draw": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -76,6 +78,7 @@
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tslib": "^2.2.0",
     "typescript": "~3.9.3",
     "yarn": "^1.22.10"
   },
