--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Highly reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
@@ -26,8 +26,11 @@
   "files": [
     "lib"
   ],
+  "peerDependencies": {
+    "vue": ">= 3.0.0 < 3.3"
+  },
   "dependencies": {
-    "@mapbox/mapbox-gl-draw": "^1.2.2",
+    "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@types/chai": "^4.2.11",
     "@types/geojson": "^7946.0.7",
@@ -37,8 +40,7 @@
     "crypto-random-string": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
     "mapbox-gl": "^2.2.0",
-    "my-deferred": "^1.0.3",
-    "vue": "^3.0.0"
+    "my-deferred": "^1.0.3"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -70,7 +72,7 @@
     "rollup": "^2.40.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0-beta.10",
