--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Highly reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
@@ -27,15 +27,15 @@
     "lib"
   ],
   "peerDependencies": {
-    "vue": ">= 3.0.0 < 3.3"
+    "vue": ">= 3.2 < 3.3"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.3.0",
-    "@mapbox/mapbox-gl-geocoder": "^4.7.4",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "@types/chai": "^4.2.11",
     "@types/geojson": "^7946.0.7",
-    "@types/mapbox-gl": "^2.6.2",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.2",
+    "@types/mapbox-gl": "^2.6.2",
     "@types/mocha": "^5.2.4",
     "crypto-random-string": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
@@ -50,20 +50,20 @@
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-url": "^6.0.0",
     "@types/mapbox__mapbox-gl-draw": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "^4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-typescript": "^5.0.1",
+    "@vue/cli-plugin-unit-mocha": "^5.0.1",
+    "@vue/cli-service": "~5.0.1",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-0",
-    "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "@wessberg/rollup-plugin-ts": "^2.0.4",
     "chai": "^4.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-vue": "^8.5.0",
     "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
     "postcss-simple-vars": "^6.0.3",
@@ -78,8 +78,8 @@
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "tslib": "^2.2.0",
-    "typescript": "~3.9.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2",
     "yarn": "^1.22.10"
   },
   "bugs": {
