--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
 - project: rm-templates/gitlab_pipelines
-  ref: v2
-  file: /templates/typescript/typescript.node.npm_package.gitlab-ci.yml
+  ref: v2.3.0
+  file: templates/vue/vue.node.docker.gitlab-ci.yml
+  
