--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Highly reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
@@ -43,6 +43,7 @@
     "my-deferred": "^1.0.3"
   },
   "devDependencies": {
+    "@cypress/vue": "^4.0.0",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
@@ -62,6 +63,7 @@
     "@wessberg/rollup-plugin-ts": "^2.0.4",
     "chai": "^4.1.2",
     "cross-env": "^7.0.3",
+    "cypress": "^10.3.0",
     "eslint": "^7.5.0",
     "eslint-plugin-vue": "^8.5.0",
     "postcss-import": "^14.0.0",
