switched to default pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 include:
 - project: rm-templates/gitlab_pipelines
   ref: v2.3.0
-  file: templates/vue/vue.node.docker.gitlab-ci.yml
-  
+  file: /templates/typescript/typescript.node.npm_package.gitlab-ci.yml
