--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rm -rf lib/ && yarn build:js",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint --no-fix",
-    "build:js": "rimraf dist && cross-env NODE_ENV=production rollup --config $npm_package_config_rollup && yarn build:types",
+    "build:js": "rm -rf ./dist && cross-env NODE_ENV=production rollup --config $npm_package_config_rollup && yarn build:types",
     "build:types": "tsc --build tsconfigtypes.json",
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs",
