first tests using screenshots

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cypress": "^10.3.0",
     "eslint": "^7.5.0",
     "eslint-plugin-vue": "^8.5.0",
+    "odiff-bin": "^2.5.0",
     "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
     "postcss-simple-vars": "^6.0.3",
