--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "webpack-env",
       "mocha",
       "chai",
-      "cypress"
+      "cypress",
+      "node"
     ],
     "paths": {
       "@/*": [
