--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.9.1",
-  "description": "Highly reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
+  "version": "0.9.2",
+  "description": "Reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
   "author": {
     "name": "Relief Melone",
     "email": "relief.melone@gmail.com"
@@ -40,19 +40,19 @@
     "crypto-random-string": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
     "mapbox-gl": "^2.9.1",
-    "my-deferred": "^1.0.3"
+    "my-deferred": "^1.1.0"
   },
   "devDependencies": {
     "@cypress/vue": "^4.0.0",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "^2.4.1",
-    "@rollup/plugin-url": "^6.0.0",
-    "@types/mapbox__mapbox-gl-draw": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-url": "^7.0.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "@vue/cli-plugin-eslint": "^5.0.1",
     "@vue/cli-plugin-typescript": "^5.0.1",
     "@vue/cli-plugin-unit-mocha": "^5.0.4",
