--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "file": "./documentation/logo.png"
   },
   "version": "0.9.2",
-  "description": "Reactive Vue3 Mapbox Framework for Vue.js written in Typescript",
+  "description": "Reactive Vue3 Mapbox Framework for Vue.js written in TypeScript",
   "author": {
     "name": "Relief Melone",
     "email": "relief.melone@gmail.com"
