--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "logo": {
     "file": "./documentation/logo.png"
   },
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "Reactive Vue3 Mapbox Framework for Vue.js written in TypeScript",
   "author": {
     "name": "Relief Melone",
@@ -37,7 +37,6 @@
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.2",
     "@types/mapbox-gl": "^2.7.3",
     "@types/mocha": "^5.2.4",
-    "crypto-random-string": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
     "mapbox-gl": "^2.9.1",
     "my-deferred": "^1.1.0"
@@ -79,7 +78,7 @@
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "rollup-plugin-vue": "^6.0.0-beta.10",
+    "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "tslib": "^2.3.1",
